# aries-acapy-plugin-toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  docker-compose.yml  docker-compose_alice_bob.yml  ngrok-wait.sh  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  startup.sh
.github/: settings.yml
aca_plugin_toolbox/: __init__.py  connections.py  credential_definitions.py  dids.py  holder.py  issuer.py  schemas.py  static_connections.py  util.py
acapy_plugin_toolbox/: __init__.py  basicmessage.py  connections.py  connections_new.py  credential_definitions.py  definition.py  dids.py  holder.py  http_ws.py  invitations.py  issuer.py  mediator.py  message_types.py  payments.py  routing.py  schemas.py  static_connections.py  taa.py  trustping.py  util.py
demo/: Dockerfile.demo  README.md  acapy-endpoint.sh  agent-tunnel-wait.sh  docker-compose-a-b-linux.yml  docker-compose.yml  (+6 more)
int/: .dockerignore  Dockerfile.test.runner  docker-compose.yml  pyproject.toml
int/acapy-backchannel/acapy_backchannel/api/did_exchange/: post_didexchange_create_request.py
int/acapy-backchannel/acapy_backchannel/api/issue_credential_v20/: get_issue_credential_20_records.py  get_issue_credential_20_records_cred_ex_id.py  post_issue_credential_20_records_cred_ex_id_issue.py  post_issue_credential_20_records_cred_ex_id_store.py
int/acapy-backchannel/acapy_backchannel/api/mediation/: post_mediation_keylists_mediation_id_send_keylist_query.py
int/acapy-backchannel/acapy_backchannel/api/present_proof/: get_present_proof_records_pres_ex_id_credentials.py
int/acapy-backchannel/acapy_backchannel/models/: __init__.py  aml_record.py  attach_decorator_data_jws.py  attachment_def.py  clear_pending_revocations_request.py  conn_record.py  connection_list.py  connection_metadata.py  create_invitation_request.py  cred_brief.py  credential_definition.py  credential_definition_get_results.py  did_endpoint_with_type.py  indy_cred_info.py  indy_proof_req_attr_spec.py  indy_proof_req_pred_spec.py  indy_proof_request.py  invitation_create_request.py  invitation_record.py  keylist_query_filter_request.py  menu_option.py  perform_request.py  publish_revocations.py  query_result.py  schema_get_results.py  schema_send_results.py  schema_send_results_sent.py  schema_send_results_txn.py  schema_sent.py  schema_sent_schema.py  taa_info.py  v10_credential_exchange.py  v10_credential_proposal_request_opt.py  v10_presentation_exchange.py  v20_cred_ex_record.py  v20_cred_ex_record_dif.py  v20_cred_ex_record_indy.py
int/configs/: default.yml
int/echo-agent/: Dockerfile  echo.py  pyproject.toml
int/echo-agent/echo-agent-client/: README.md  pyproject.toml
int/echo-agent/echo-agent-client/echo_agent_client/: __init__.py
int/echo-agent/echo-agent-client/echo_agent_client/api/default/: debug_info_debug_get.py  new_connection.py  receive_message_receive_post.py  retrieve_messages.py  send_message.py  wait_for_message.py
int/echo-agent/echo-agent-client/echo_agent_client/models/: __init__.py  connection.py  debug_info.py  debug_info_connections.py  debug_info_messages.py  debug_info_recip_key_to_connection_id.py  http_validation_error.py  new_connection.py  retrieve_messages_response_200_item.py  send_message_message.py  wait_for_message_response_wait_for_message_wait_for_connection_id_get.py
int/echo-agent/scripts/: generate-client.sh  openapi.json
int/scripts/: openapi.yml
int/tests/: __init__.py  conftest.py  test_basicmessage.py  test_conftest.py  test_connection_reuse.py  test_connections.py  test_credentialdefinitions.py  test_example.py  test_holder.py  test_invitations.py  test_presentation.py  test_schemas.py  test_trustping.py
(+100 files in other folders)
