[tool.poetry]
name = "aries-acapy-plugin-toolbox"
version = "0.2.0"
description = "Aries Cloud Agent - Python Plugin for Aries Toolbox"
authors = [
    "Daniel Bluhm <dbluhm@pm.me>",
    "Sam Curren <telegramsam@gmail.com>",
    "Adam Burdett <burdettadam@gmail.com>",
    "Mike Lodder",
    "Char Howland <char@indicio.tech",
    "Matthew Wright <matthew@indicio.tech"
]
maintainers = [
    "Daniel Bluhm <dbluhm@pm.me>",
    "Matthew Wright <matthew@indicio.tech",
    "Char Howland <char@indicio.tech>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hyperledger/aries-acapy-plugin-toolbox"
repository = "https://github.com/hyperledger/aries-acapy-plugin-toolbox"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "acapy_plugin_toolbox" }
]

[tool.poetry.dependencies]
python = "^3.6.9"
marshmallow = "3.5.1"
python-dateutil = "^2.8.1"
aries-cloudagent = {version = "^0.7.3", extras = ["indy"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
asynctest = "0.13.0"
pre-commit = "^2.13.0"
black = "^21.6b0"
flake8 = "^3.9.2"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
