[tool.poetry]
name = "acapy-plugin-toolbox-int-tests"
version = "0.1.0"
description = "Integration tests for ACA-Py plugin toolbox"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Char Howland <char@indicio.tech>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
asynctest = "0.13.0"
acapy-client = {git = "https://github.com/Indicio-tech/acapy-client.git", rev = "d2dcbfbe1e34e30ba2a6039610743221ae842a68"}
echo-agent = {git = "https://github.com/Indicio-tech/echo-agent.git", rev = "main", extras=["client"]}
aries-staticagent = ">=0.9.0rc4"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
